# SynFin---SQLA

./: .gitignore  main.py  pb_auth.py  pb_invoices.py  pb_sessions.py  pyproject.toml  sqla_test.py
output/: invoices.txt  sessions.txt
src/pb/: pb_invoices.py  pb_sessions.py
